// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > MessageBubble received 1`] = `
<div
  class="group flex items-end gap-1 justify-start"
>
  <div
    class="max-w-[75%] rounded-2xl px-3.5 py-2 text-sm rounded-bl-sm bg-zinc-800 text-zinc-100"
  >
    <p
      class="whitespace-pre-wrap break-words"
    >
      Existe endpoint de reset de senha?
    </p>
    <p
      class="mt-1 flex items-center justify-end gap-1.5 text-[10px] text-zinc-500"
    >
      <span>
        11:30
      </span>
    </p>
  </div>
</div>
`;

exports[`snapshots > MessageBubble sent (delivered) 1`] = `
<div
  class="group flex items-end gap-1 justify-end"
>
  <div
    class="max-w-[75%] rounded-2xl px-3.5 py-2 text-sm rounded-br-sm bg-emerald-700 text-white"
  >
    <p
      class="whitespace-pre-wrap break-words"
    >
      Existe endpoint de reset de senha?
    </p>
    <p
      class="mt-1 flex items-center justify-end gap-1.5 text-[10px] text-emerald-200/70"
    >
      <span>
        11:30
         · entregue
      </span>
    </p>
  </div>
</div>
`;

exports[`snapshots > Sidebar with team and presence 1`] = `
<aside
  class="flex w-72 shrink-0 flex-col border-r border-zinc-800"
>
  <div
    class="border-b border-zinc-800 p-3"
  >
    <p
      class="mb-1 text-xs uppercase tracking-wide text-zinc-500"
    >
      Conversando como
    </p>
    <div
      class="relative w-full"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Conversando como"
        class="flex w-full items-center justify-between gap-2 rounded-md border border-zinc-700 bg-zinc-900 px-2.5 py-1.5 text-left text-sm text-zinc-200 outline-none transition-colors hover:border-zinc-600 focus:border-amber-500"
        type="button"
      >
        <span
          class="truncate"
        >
          — selecione um agente —
        </span>
        <span
          aria-hidden="true"
          class="shrink-0 text-xs text-zinc-500"
        >
          ▾
        </span>
      </button>
    </div>
    <p
      class="mt-2 text-xs text-zinc-500"
    >
      Você ainda não tem agentes. Crie um em “Meus agentes”.
    </p>
  </div>
  <div
    class="min-h-0 flex-1 overflow-y-auto"
  >
    <p
      class="px-3 pb-1 pt-3 text-xs uppercase tracking-wide text-zinc-500"
    >
      Equipe
    </p>
    <ul>
      <li>
        <button
          class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-zinc-900 "
          type="button"
        >
          <span
            aria-label="offline"
            class="inline-block h-2.5 w-2.5 rounded-full bg-zinc-600"
            role="img"
          />
          <span
            class="min-w-0 flex-1"
          >
            <span
              class="block truncate text-sm text-zinc-200"
            >
              mobile-eduardo
            </span>
            <span
              class="block truncate text-xs text-zinc-500"
            >
              Mobile do Eduardo
            </span>
          </span>
        </button>
      </li>
    </ul>
    <p
      class="px-3 pb-1 pt-4 text-xs uppercase tracking-wide text-zinc-500"
    >
      Grupos
    </p>
    <ul>
      <li>
        <button
          class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-zinc-900 "
          type="button"
        >
          <span
            class="text-zinc-500"
          >
            #
          </span>
          <span
            class="min-w-0 flex-1"
          >
            <span
              class="block truncate font-mono text-sm text-zinc-200"
            >
              @all
            </span>
            <span
              class="block truncate text-xs text-zinc-500"
            >
              todos os agentes (2)
            </span>
          </span>
        </button>
      </li>
    </ul>
  </div>
</aside>
`;
